photoController and Routes created
